css/style.css
*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  line-height: 1;
  background-color: #FAEBD7;
  color: #3A4957;
}

.mainPage {
  padding: 2rem;
}
.mainPage header {
  width: 100%;
  text-align: center;
}

.mainPage header h1 {
  font-family: 'Josefin Sans', sans-serif;
  font-size: 3rem;
}
.mainPage header h1 span {
  font-weight: 400;
  margin-left: 1rem;
}
.mainPage header h2 {
  font-family: 'Josefin Sans', sans-serif;
  margin-top: -0.5rem;
  letter-spacing: 0.1rem;
  font-size: 1.8rem;
  margin-bottom: 3rem;
}

.links {
  font-family: 'Cousine', monospace;
  font-size: 1.3rem;
  padding-top: 1.5rem;
}
.mainPage a {
  color: #55BED7;
}

.mainPage section h2 {
  font-family: 'Josefin Sans', sans-serif;
  text-align: center;
}

.mainPage section {
  margin-top: 7rem;
  font-size: 1.2rem;
  font-family: 'Cousine', monospace;
}

#current {
  text-align: center;
}

#work h2 {
  margin-top: 12rem;
}
#work {
  font-size: 1rem;
}

#work img,
#work .digital-display {
  margin-top: 2rem;
  margin-bottom: 0.5rem;
  width: 100%;
}
#work p {
  margin-top: 2rem;
}
#work li {
  margin-top: 1rem;
  font-size: 0.8rem;
  list-style-position: inside;
  padding-left: 1rem;

}

#work .digital-display-work {
  color: #3A4957;
  margin-top: 0;
}

a {
  text-decoration: none;
  cursor: pointer;
}

.noscroll {
  overflow: hidden;
}


#contact-bg-cover,
#display-work-bg-cover {
  display: none;
  background: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow-y: scroll;
  z-index: 10000;
}

#digital-display-target {
  position: relative;
  margin: 0 auto;
  margin-top: 20%;
  width: 970px;
  height: 250px;
  display: none;
}

#mazda_970x250 {
  font-size: 0.7rem;
  margin-bottom: 3%;
  color: #FAEBD7;
}

#digital-display-iframe {
  width: 100%;
  height: 100%;
  display: none;
  border: 1px solid #FAEBD7;
}

#display-work-close {
  right: 0;
  top: -15%;
  position: absolute;
  color: #FAEBD7;
  font-size: 4rem;
  font-weight: 100;
  cursor: pointer;
}

#contact {
  width: 80%;
  position: fixed;
  bottom: 10%;
  left: 10%;
  display: none;
  padding: 2%;
  background: rgba(58, 73, 87, 0.9);
  opacity: 0;
  overflow: scroll;
  z-index: 11000;
}

#contact-close {
  right: 1%;
  top: -3%;
  position: absolute;
  color: #FAEBD7;
  font-size: 1.5rem;
  font-weight: 100;
  cursor: pointer;
}

fieldset {
  border: none;
  padding: 0;
  margin: 0;
}

.form-textarea,
.form-email {
  width: 100%;
  padding: 1%;
  margin: 0 auto 10px;
  display: block;
  border: none;
  background: rgba(198, 207, 209, 0.6);
  font-weight: 300;
  font-size: 1rem;
  font-family: 'Cousine', monospace;
}

::-webkit-input-placeholder {
  color: #FAEBD7;
}

:-moz-placeholder {
  color: #FAEBD7;
}

::-moz-placeholder {
  color: #FAEBD7;
}

:-ms-input-placeholder {
  color: #FAEBD7;
}

.form-textarea:focus,
.form-email:focus {
  background: rgba(255, 255, 255, 0.6);
  outline: none;
}

.form-submit {
  padding: 5px 40px;
  border: 1px solid rgb(58, 73, 87);
  background: rgba(198, 207, 209, 0.6);
  font-size: 1rem;
  float: right;
  outline: none;
  cursor: pointer;
  font-family: 'Cousine', monospace;
  color: #3A4957;
}

.form-submit:hover {
  background-color: rgb(58, 73, 87);
  border: 1px solid #FAEBD7;
  color: #FAEBD7;
}

#contact-form label.error {
  display: block;
  width: 100%;
  color: #fff;
  font-size: 1.6rem;
  font-weight: 500;
  margin-top: -4px;
  margin-bottom: 10px;
}

#contact-form input.error,
#contact-form textarea.error {
  border-color: red;
  box-shadow: 0 0 20px red;
}



@media only screen and (min-width: 500px) {


.mainPage header h1 {
  font-size: 6rem;
}
.mainPage header h1 span {
  font-weight: 400;
  margin-left: 1rem;
}
.mainPage header h2 {
  letter-spacing: 0.2rem;
  font-size: 3.5rem;
}

.links {
  font-size: 2rem;
  padding-top: 2.6rem;
}

.mainPage section {
  margin-top: 12rem;
  font-size: 2rem;
  font-family: 'Cousine', monospace;
}

#work h2 {
  margin-top: 15rem;
}
#work {
  font-size: 1.8rem;
}

#work img,
#work .digital-display {
  margin-top: 6rem;
  margin-bottom: 0.5rem;
  width: 100%;
}
#work p {
  margin-top: 2rem;
}
#work li {
  margin-top: 1rem;
  font-size: 1.3rem;
  list-style-position: inside;
  padding-left: 1rem;

}

#work .digital-display-work {
  color: #3A4957;
  margin-top: 0;
}



#display-work-heading {
  font-size: 1.7rem;
}

#mazda_970x250 {
  font-size: 1.2rem;
}


} /* END OF 500px MEDIA QUERY */




@media only screen and (min-width: 995px) {

.mainPage header h1 {
  font-size: 6rem;
}
.mainPage header h1 span {
  font-weight: 400;
  margin-left: 1rem;
}
.mainPage header h2 {
  letter-spacing: 0.2rem;
  font-size: 3.5rem;
}

.links {
  font-size: 2rem;
}



.mainPage section {
  padding-left: 10rem;
  padding-right: 10rem;
  margin-top: 9rem;
  font-size: 2rem;
  font-family: 'Cousine', monospace;
}

#work h2 {
  margin-top: 12rem;
}
#work {
  font-size: 1.8rem;
}

#work img,
#work .digital-display {
  margin-top: 6rem;
  margin-bottom: 0.5rem;
  width: 100%;
}
#work p {
  margin-top: 2rem;
}
#work li {
  margin-top: 1rem;
  line-height: 1.3;
  font-size: 1.3rem;
  list-style-position: inside;
  padding-left: 1rem;

}

#work .digital-display-work {
  color: #3A4957;
  margin-top: 0;
}



#display-work-heading {
  font-size: 1.7rem;
}

#mazda_970x250 {
  font-size: 1.2rem;
}
#mazda_970x250 img {
  cursor: pointer;
}

#display-work-close {
  top: -4rem;
}

#contact {
  width: 60%;
  left: 20%;
}

#contact-close {
  top: -1%;
}

} /* END OF 900px MEDIA QUERY */


.links a:hover {
  background-color: rgb(58, 73, 87);
  color: #FAEBD7;
}

